stop check content from overflowing

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -771,6 +771,11 @@ div.tag .close-icon {
 }
 
 /* DASHBOARD ELEMENTS */
+.ticker > .check-content,
+.check > .check-content {
+	overflow: hidden;
+}
+
 .ticker > .edit,
 .check > .edit {
 	position: absolute;
